--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.17",
     "react": "^18",
