--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^3.4.0",
     "@t3-oss/env-core": "^0.10.1",
     "@tanstack/react-query": "^5.34.2",
     "@uploadthing/react": "^6.5.1",
