--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@hookform/resolvers": "^3.3.4",
-    "@mapbox/search-js-react": "^1.0.0-beta.21",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^3.4.0",
     "@t3-oss/env-core": "^0.10.1",
     "@tanstack/react-query": "^5.34.2",
+    "@types/google.maps": "^3.55.8",
     "@uploadthing/react": "^6.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
