--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@tanstack/react-query": "^5.34.2",
     "@types/google.maps": "^3.55.8",
     "@uploadthing/react": "^6.5.1",
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.378.0",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
