--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.378.0",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
