--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/google.maps": "^3.55.8",
     "@uploadthing/react": "^6.5.1",
     "@vercel/speed-insights": "^1.0.10",
+    "add-to-calendar-button-react": "^2.6.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
