--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "recharts": "^2.12.7",
+    "resend": "^3.2.0",
     "stripe": "^15.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
