--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^3.4.4",
     "@stripe/stripe-js": "^3.4.0",
     "@t3-oss/env-core": "^0.10.1",
     "@tanstack/react-query": "^5.34.2",
