--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "add-to-calendar-button-react": "^2.6.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.3",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.1",
