--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.34.2",
     "@types/google.maps": "^3.55.8",
     "@uploadthing/react": "^6.5.1",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.10",
     "add-to-calendar-button-react": "^2.6.15",
     "class-variance-authority": "^0.7.0",
